--- a/apps/pdfexport/static/pdfexport/finalreport.css
+++ b/apps/pdfexport/static/pdfexport/finalreport.css
@@ -218,18 +218,12 @@ tr, th, td {
   display: inline-block; 
   width: 100%; 
   text-decoration: none; 
-  color: var(--primary); 
+  color: var(--text); 
 }
 
 #toc li a::after {
   content: " | Page " target-counter(attr(href), page);
-}
-
-.toc-list li { overflow: hidden; } /* makes sure the floated page number stays on the line */
-.toc-list li::after {
-  content: leader(dots) " " target-counter(attr(data-target), page);
-  float: right;
-  color: var(--text-light);
+  color: var(--primary);
 }
 
 @page toc {
@@ -557,7 +551,7 @@ tr, th, td {
 .commitment-table {
   width: 100%;
   table-layout: fixed;
-  margin: 14pt 0 28pt;
+  margin: 30px 0 0;
   font-family: var(--sans-font);
 }
 
@@ -590,7 +584,7 @@ tr, th, td {
 
 /* Taller writing area on commitments */
 .commitment-table tbody td {
-  min-height: 380px;
+  min-height: 580px;
 }
 
 
