Import font url to report, add assessment ID to report job name

--- a/apps/pdfexport/static/pdfexport/finalreport.css
+++ b/apps/pdfexport/static/pdfexport/finalreport.css
@@ -1,3 +1,5 @@
+@import url('/static/fonts/Metropolis/metropolis.css');
+
 /* Global variables. */
 :root {
   --sans-font: "Metropolis", -apple-system, BlinkMacSystemFont, "Avenir Next",
