--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -13,13 +13,13 @@
     <ul>
       <li>
         <a href="{% url 'dashboard_home' %}" 
-           class="nav-link {% if section == 'dashboard' %}active{% endif %}">
+           class="nav-link {% if section == 'dashboard_home' %}active{% endif %}">
           <i data-lucide="layout-dashboard"></i> Dashboard
         </a>
       </li>
       <li>
         <a href="{% url 'assessments_overview' %}" 
-           class="nav-link {% if section == 'assessment' %}active{% endif %}">
+           class="nav-link {% if section == 'assessments' %}active{% endif %}">
           <i data-lucide="clipboard-list"></i> Assessments
         </a>
       </li>
@@ -30,7 +30,7 @@
         </a>
       </li>
       <li>
-        <a href="{% url 'generate_report' %}" 
+        <a href="{% url 'reports_overview' %}" 
            class="nav-link {% if section == 'reports' %}active{% endif %}">
           <i data-lucide="file-text"></i> Reports
         </a>
