--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,7 +131,7 @@ h3 {
   border: var(--border-width) solid var(--primary);
   background-color: var(--primary);
   color: var(--bg);
-  padding: 0.4em 1.2rem;
+  padding: 0.4em 1rem;
   font-size: 0.95rem;
   font-family: inherit;
   line-height: normal;
@@ -339,14 +339,29 @@ h3 {
   font-weight: bold;
 }
 
+.header-actions {
+  display: flex;
+  align-items: right;
+  gap: 0.5rem;
+}
+
 .logout-link {
   color: var(--primary);
-  text-decoration: none;
+  padding: 0.4em 1rem;
+  font-size: 0.9rem;
   font-weight: 500;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
 .logout-link:hover {
-  color: var(--primary-hover)
+  color: var(--primary-hover);
+  text-decoration: none;
+}
+
+.logout-link::after {
+  color: var(--primary-hover);
+  text-decoration: none;
 }
 
 /* Dashboard layout */
