--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,6 +6,9 @@
       </div>
       <span>{{ request.user.username }}</span>
     </div>
-    <a href="{% url 'accounts:logout' %}" class="logout-link">Log Out</a>
+    <div class="header-actions">
+      <a href="{% url 'accounts:logout' %}" class="text-button">Log Out</a>
+      <a href="{% url 'new_assessment' %}" class="button">New Assessment</a>
+    </div>
   {% endif %}
 </header>
