--- a/apps/dashboard/templates/dashboard/home.html
+++ b/apps/dashboard/templates/dashboard/home.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="main-heading">
   <h1>Dashboard</h1>
-  <a href="{% url 'new_assessment' %}" class="button--primary">New Assessment</a>
+  <a href="{% url 'assessments:new_assessment' %}" class="button--primary">New Assessment</a>
 </div>
 
 <div class="dashboard-grid">
