--- a/apps/dashboard/templates/dashboard/includes/reports_list.html
+++ b/apps/dashboard/templates/dashboard/includes/reports_list.html
@@ -1,7 +1,7 @@
 <div class="dashboard-section">
     <div class="section-header">
         <h2>Reports</h2>
-        <a href="{% url 'reports_overview' %}" class="unstyled-link">See All</a>
+        <a href="{% url 'reports:reports_overview' %}" class="unstyled-link">See All</a>
     </div>
     <div class="card">
         {% if reports %}
