--- a/apps/reports/templates/reports/overview.html
+++ b/apps/reports/templates/reports/overview.html
@@ -6,7 +6,7 @@
     <h1>Reports</h1>
     <p>Below you can find the final reports you’ve purchased.</p>
     <p>To purchase a report for an assessment that's been completed, please go to  
-    <a href="{% url 'assessments_overview' %}">Assessments</a>.</p>
+    <a href="{% url 'assessments:assessments_overview' %}">Assessments</a>.</p>
 
     {% if reports %}
         <div class="table-wrapper">
