--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -8,7 +8,7 @@
     </div>
     <div class="header-actions">
       <a href="{% url 'accounts:logout' %}" class="logout-link">Log Out</a>
-      <a href="{% url 'new_assessment' %}" class="button">New Assessment</a>
+      <a href="{% url 'assessments:new_assessment' %}" class="button">New Assessment</a>
     </div>
   {% endif %}
 </header>
